@@ -19,8 +19,6 @@
  *
  */
 
-#ifndef USE_OSCAR
-
 #include <string.h>
 #include <stdio.h>
 #include <stdlib.h>
@@ -76,9 +74,13 @@ static void cancel_callback(GtkWidget *widget, struct file_transfer *ft)
 		return;
 	}
 	
+#ifndef USE_OSCAR
 	g_snprintf(send, 255, "toc_rvous_cancel %s %s %s", normalize(ft->user),
 			ft->cookie, ft->UID);
 	sflap_send(send, strlen(send), TYPE_DATA);
+#else
+	/* FIXME : can we really do this? */
+#endif
 	g_free(send);
 	free_ft(ft);
 }
@@ -235,9 +237,13 @@ static void do_get_file(GtkWidget *w, struct file_transfer *ft)
 	
 	gtk_widget_destroy(ft->window);
 	ft->window = NULL;
+#ifndef USE_OSCAR
 	g_snprintf(send, 255, "toc_rvous_accept %s %s %s", normalize(ft->user),
 			ft->cookie, ft->UID);
 	sflap_send(send, strlen(send), TYPE_DATA);
+#else
+	/* FIXME (?) */
+#endif
 	g_free(send);
 
 	
@@ -340,8 +346,12 @@ static void do_get_file(GtkWidget *w, struct file_transfer *ft)
 
 	if (!cont) {
 		char *tmp = frombase64(ft->cookie);
+#ifndef USE_OSCAR
 		sprintf(buf, "toc_rvous_cancel %s %s %s", ft->user, tmp, ft->UID);
 		sflap_send(buf, strlen(buf), TYPE_DATA);
+#else
+		/* FIXME (?) */
+#endif
 		close(ft->fd);
 		free_ft(ft);
 		g_free(header);
@@ -395,9 +405,13 @@ static void do_send_file(GtkWidget *w, struct file_transfer *ft) {
 
 	gtk_widget_destroy(ft->window);
 	ft->window = NULL;
+#ifndef USE_OSCAR
 	g_snprintf(send, 255, "toc_rvous_accept %s %s %s", normalize(ft->user),
 			ft->cookie, ft->UID);
 	sflap_send(send, strlen(send), TYPE_DATA);
+#else
+	/* FIXME */
+#endif
 	g_free(send);
 
 
@@ -608,8 +622,12 @@ static void do_send_file(GtkWidget *w, struct file_transfer *ft) {
 
 	if (!cont) {
 		char *tmp = frombase64(ft->cookie);
+#ifndef USE_OSCAR
 		sprintf(buf, "toc_rvous_cancel %s %s %s", ft->user, tmp, ft->UID);
 		sflap_send(buf, strlen(buf), TYPE_DATA);
+#else
+		/* FIXME */
+#endif
 		g_free(buf);
 		close(ft->fd);
 		free_ft(ft);
@@ -701,5 +719,3 @@ void accept_file_dialog(struct file_transfer *ft)
 		*/
 	}
 }
-
-#endif /* USE_OSCAR */
